--- a/8-zadania-wyzwanie/2-lista-uzytkownikow/package.json
+++ b/8-zadania-wyzwanie/2-lista-uzytkownikow/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "test-json",
+  "name": "ssss",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server --watch database/database.json"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "json-server": "^0.16.2"
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "json-server": "^0.17.0"
   }
 }
